--- a/css/media.css
+++ b/css/media.css
@@ -20,6 +20,9 @@
   button {
     padding: 8px;
   }
+  main {
+    margin: 10px;
+  }
 }
 @media (min-width: 637px) and (max-width: 820px) {
   .hamburger {
@@ -29,6 +32,6 @@
     display: none;
   }
   main {
-    margin: 100px 50px;
+    margin: 10px;
   }
 }
