--- a/css/media.css
+++ b/css/media.css
@@ -23,6 +23,9 @@
   main {
     margin: 10px;
   }
+  .skills-content {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 @media (min-width: 637px) and (max-width: 820px) {
   .hamburger {
