--- a/css/media.css
+++ b/css/media.css
@@ -26,6 +26,9 @@
   .skills-content {
     grid-template-columns: repeat(2, 1fr);
   }
+  footer {
+    flex-direction: column;
+  }
 }
 @media (min-width: 637px) and (max-width: 820px) {
   .hamburger {
