--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@
   content: "";
   padding: 4px;
   width: 50%;
-  background-color: var(--bg-yellow);
+  background-color: var(--bg-light-purple);
   bottom: 100%;
   left: 25%;
   transition: 0.5s transform;
