--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,7 @@
 @media only screen and (max-width: 636px) {
+  body {
+    grid-template-columns: auto;
+  }
   .hamburger {
     display: block;
   }
@@ -25,13 +28,18 @@
     margin: 0 20px;
   }
   main {
-    margin: 10px;
+    padding: 16px;
   }
   .skills-content {
     grid-template-columns: repeat(2, 1fr);
   }
   footer {
     flex-direction: column;
+    margin: 40px;
+  }
+  .to-top {
+    bottom: 20px;
+    right: 20px;
   }
 }
 @media (min-width: 637px) and (max-width: 820px) {
