--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,8 @@
   max-width: 100%;
 }
 body {
-  width: 100vw;
+  position: relative;
+  max-width: 100vw;
   min-height: 100vh;
   display: grid;
   grid-template-rows: auto auto 1fr auto;
@@ -32,7 +33,6 @@ body {
     "main"
     "footer";
   overflow-x: hidden;
-  position: relative;
 }
 
 header {
